# Artificial-Intelligence-

Final Project/: README.md
Final Project/Voice_Cloning_AI_V1/: demo_cli.py  text inputs.txt
Final Project/Voice_Cloning_AI_V1/encoder1/: inference.py
Final Project/Voice_Cloning_AI_V1/synthesizer1/: cleaners.py
Final Project/Voice_Cloning_AI_V1/vocoder1/: hparams.py  inference.py
Final Project/Voice_Cloning_AI_V2/: demo_cli.py  encoder_preprocess.py  encoder_train.py  synthesizer_preprocess_audio.py  synthesizer_preprocess_embeds.py  synthesizer_train.py  text inputs.txt  vocoder_preprocess.py  vocoder_train.py
Final Project/Voice_Cloning_AI_V2/synthesizer/: audio.py  hparams.py
Final Project/Voice_Cloning_AI_V2/vocoder/models/: deepmind_version.py
Lab 3/BFS_DFS_OpenGL/: CMakeLists.txt  main.cpp
Lab 4/Astar_BestFirst__V3/: CMakeLists.txt  main.cpp
Lab 4/Astar_BestFirst_v2/: CMakeLists.txt  main.cpp
Lab 4/Astar_BestFisrt/: AStar.cpp  AStar.h  Algorithm.h  AlgorithmFactory.h  BestFS.cpp  BestFS.h  CMakeLists.txt  Game.cpp  Game.h  Graph.cpp  Graph.h  Grid.cpp  Grid.h  Location.h  main.cpp
Lab 6/Checkers_MiniMax_AI/: CMakeLists.txt  board.cpp  board.h  game.cpp  game.h  main.cpp  pawn.cpp  pawn.h
Lab 8/TSP_GeneticAlgorithm/: header.h
